--- a/MDK-ARM/MOTORTEST/MOTORTEST.build_log.htm
+++ b/MDK-ARM/MOTORTEST/MOTORTEST.build_log.htm
@@ -21,18 +21,12 @@ Target DLL:      STLink\ST-LINKIII-KEIL_SWO.dll V3.0.7.0
 Dialog DLL:      TCM.DLL V1.36.5.0
  
 <h2>Project:</h2>
-f:\keilProject\MOTORTEST\MDK-ARM\MOTORTEST.uvprojx
+f:\keilProject\Roomba\MDK-ARM\MOTORTEST.uvprojx
 Project File Date:  11/20/2021
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'F:\KeilMDK\ARM\ARMCC\Bin'
 Build target 'MOTORTEST'
-compiling car_control.c...
-compiling main.c...
-compiling motor.c...
-linking...
-Program Size: Code=9454 RO-data=354 RW-data=40 ZI-data=1896  
-FromELF: creating hex file...
 "MOTORTEST\MOTORTEST.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
@@ -56,7 +50,7 @@ Package Vendor: Keil
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:5.5.0
-Build Time Elapsed:  00:00:04
+Build Time Elapsed:  00:00:01
 </pre>
 </body>
 </html>
