回字形成功，待加传感器

--- a/MDK-ARM/MOTORTEST/MOTORTEST.build_log.htm
+++ b/MDK-ARM/MOTORTEST/MOTORTEST.build_log.htm
@@ -21,7 +21,7 @@ Target DLL:      STLink\ST-LINKIII-KEIL_SWO.dll V3.0.7.0
 Dialog DLL:      TCM.DLL V1.36.5.0
  
 <h2>Project:</h2>
-F:\keilProject\Roomba\MDK-ARM\MOTORTEST.uvprojx
+f:\keilProject\Roomba\MDK-ARM\MOTORTEST.uvprojx
 Project File Date:  11/20/2021
 
 <h2>Output:</h2>
@@ -54,7 +54,7 @@ Package Vendor: Keil
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:5.5.0
-Build Time Elapsed:  00:00:01
+Build Time Elapsed:  00:00:05
 </pre>
 </body>
 </html>
