--- a/MDK-ARM/MOTORTEST/MOTORTEST.build_log.htm
+++ b/MDK-ARM/MOTORTEST/MOTORTEST.build_log.htm
@@ -27,9 +27,9 @@ Project File Date:  11/20/2021
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'F:\KeilMDK\ARM\ARMCC\Bin'
 Build target 'MOTORTEST'
-compiling motor.c...
+compiling car_control.c...
 linking...
-Program Size: Code=9454 RO-data=354 RW-data=40 ZI-data=1896  
+Program Size: Code=9298 RO-data=354 RW-data=56 ZI-data=1896  
 FromELF: creating hex file...
 "MOTORTEST\MOTORTEST.axf" - 0 Error(s), 0 Warning(s).
 
@@ -54,7 +54,7 @@ Package Vendor: Keil
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:5.5.0
-Build Time Elapsed:  00:00:05
+Build Time Elapsed:  00:00:01
 </pre>
 </body>
 </html>
