--- a/MDK-ARM/MOTORTEST/MOTORTEST.build_log.htm
+++ b/MDK-ARM/MOTORTEST/MOTORTEST.build_log.htm
@@ -22,14 +22,14 @@ Dialog DLL:      TCM.DLL V1.36.5.0
  
 <h2>Project:</h2>
 f:\keilProject\Roomba\MDK-ARM\MOTORTEST.uvprojx
-Project File Date:  11/20/2021
+Project File Date:  01/08/2022
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'F:\KeilMDK\ARM\ARMCC\Bin'
 Build target 'MOTORTEST'
-compiling car_control.c...
+compiling main.c...
 linking...
-Program Size: Code=9298 RO-data=354 RW-data=56 ZI-data=1896  
+Program Size: Code=8898 RO-data=354 RW-data=16 ZI-data=1896  
 FromELF: creating hex file...
 "MOTORTEST\MOTORTEST.axf" - 0 Error(s), 0 Warning(s).
 
@@ -54,7 +54,7 @@ Package Vendor: Keil
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:5.5.0
-Build Time Elapsed:  00:00:01
+Build Time Elapsed:  00:00:02
 </pre>
 </body>
 </html>
